--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ python-multipart==0.0.5
 python-snappy==0.6.1
 PyYAML==6.0
 requests==2.28.1
+schedule==1.1.0
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
