--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,8 @@ jobs:
       with:
         lambda_layer_arn: 'arn:aws:lambda:eu-west-3:017000801446:layer:AWSLambdaPowertoolsPythonV2'
         lambda_function_name: 'arn:aws:lambda:eu-west-3:175087579579:function:roninwear_kimono_price_tracker'
-        lambda_region: 'eu-west-3'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: 'eu-west-3'
+
