--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -2,6 +2,7 @@ name: Run Python Script
 on:
   schedule:
     - cron: "15 * * * *" # Runs every hour, adjust to your needs
+  workflow_dispatch:
 jobs:
   run-script:
     runs-on: ubuntu-latest
