--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -15,12 +15,14 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Create .env file
+        run: |
+          echo "ATLAS_URI=${{ secrets.ATLAS_URI }}" > .env
+
       - name: Install dependencies
         run: pip install -r requirements.txt
 
       - name: Run script
-        env:
-          ATLAS_URI: ${{ secrets.ATLAS_URI }}
         run: python main.py
 
       - name: Upload detailed log file
