--- a/.github/workflows/python_script.yml
+++ b/.github/workflows/python_script.yml
@@ -1,7 +1,7 @@
 name: Run Python Script
 on:
   schedule:
-    - cron: "15 * * * *" # Runs every hour, adjust to your needs
+    - cron: "0 9 * * *" # Runs daily, at 9am
   workflow_dispatch:
 jobs:
   run-script:
